Fix align Left to Center

--- a/src/assets/css/exchange.scss
+++ b/src/assets/css/exchange.scss
@@ -275,6 +275,7 @@
     letter-spacing: -0.2px;
     color: #141927;
     margin-bottom: 30px;
+    text-align: center;
 
     .icon {
       width: 100px;
